# vm0

./: .env.local.tpl  .gitignore  .release-please-manifest.json  CLAUDE.md  CONTRIBUTING.md  ESLINT_SUPPRESSION_AUDIT.md  ESLINT_SUPPRESSION_CLEANUP_SUMMARY.md  LICENSE  README.md  commitlint.config.mjs  lefthook.yml  release-please-config.json  replace_makita.sh  vm0.code-workspace
.claude/: settings.json
.claude/agents/: commit-validator.md  e2e-ui-tester.md  pr-pipeline-monitor.md  pre-commit-checker.md
.claude/commands/: clean-catch.md  code-review.md  defensive-code-cleanup.md  dev-auth.md  dev-logs.md  dev-start.md  dev-stop.md  dev-tunnel.md  develop-and-merge.md  issue-bug.md  issue-compact.md  issue-continue.md  issue-create.md  issue-feature.md  issue-new.md  issue-todo.md  pr-check-and-merge.md  pr-check.md  pr-comment.md  pr-create.md  pr-list.md  pr-review-and-comment.md  pr-review.md  preview-envs-cleanup.md  tech-debt-issue.md  tech-debt-research.md
.devcontainer/: devcontainer.json  setup.sh
.docker/ci-toolchain/: Dockerfile
.docker/toolchain/: Dockerfile
.github/: DEPLOYMENT_SETUP.md  dependabot.yml
.github/workflows/: cleanup-stale.yml  cleanup.yml  crates.yml  docker-build.yml  docker-publish.yml  docker-toolchain.yml  e2b-template.yml  publish.yml  release-please.yml  run.yml  turbo.yml
ansible/: ansible.cfg
ansible/playbooks/: cleanup-runner.yml  deploy-runner.yml
codereviews/20251115/: OVERALL-SUMMARY.md  SUMMARY.md  commit-list.md  review-03413cf.md  review-0ad29d1.md  review-39b9315.md  review-437d6fc.md  review-4d97499.md  review-4e0d49a.md  review-5d15ec5.md  review-684dd57.md  review-6d2c173.md  review-7423114.md  review-769837c.md  review-7b25a06.md  review-8185a3f.md  review-829341a.md  review-84fea45.md  review-b10b218.md  review-b845d1d.md  review-ba28bd6.md  review-d3dafca.md  review-dfd8049.md  review-e4241fe.md
codereviews/20251116/: SUMMARY.md  review-0783b82.md  review-34bd85b.md  review-8eb2d21.md  review-a551950.md  review-b15a24b.md  review-b821df4.md  review-dd886b9.md  review-e2af8ff.md
codereviews/20251117/: commit-list.md  review-04612b2.md  review-1c793f7.md  review-3a7d77a.md  review-78eef54.md  review-a46585a.md  review-cd471c7.md  review-d89e686.md  review-e4fd5ed.md  review-f8a9b08.md  summary.md
codereviews/20251118/: review-0b860e1.md  review-7e5b639.md  review-87c887c.md  review-a8434d9.md  review-b6ae61c.md  review-d67380a.md  review-d743837.md  review-ea55437.md  review-f05fdee.md  summary.md
codereviews/20251119/: SUMMARY.md  commit-list.md  review-0783b82.md  review-0cc2bd3.md  review-1a8192a.md  review-2505d84.md  review-34bd85b.md  review-4842d80.md  review-8af0ab5.md  review-b15a24b.md  review-b821df4.md  review-c0b8d11.md  review-c6df6a2.md  review-dd886b9.md  review-e2af8ff.md  review-ea8dcfa.md  review-ead58b6.md
codereviews/20251121/: INDEX.md  OVERALL_SUMMARY.md  README.md  REVIEW_SUMMARY.md  commit-list.md  review-098adc6.md  review-0caed8a.md  review-231bbf2.md  review-304f672.md  review-37ccecc.md  review-3d7b336.md  review-6d160ab.md  review-6f3d79c.md  review-7bbb25e.md  review-8e2ff1d.md  review-a197eba.md  review-a6f0d7f.md  review-b224f0d.md  review-eccd66b.md  review-ed424ef.md
codereviews/20251124/: SUMMARY.md  (+3 more)
crates/: Cargo.toml  README.md
crates/ably-subscriber/: Cargo.toml
crates/ably-subscriber/examples/: integration_test.rs  smoke_test.rs  subscribe.rs
crates/ably-subscriber/src/: connection.rs  lib.rs  protocol.rs  subscribe.rs  types.rs
crates/ably-subscriber/tests/: integration.rs
crates/guest-agent/: Cargo.toml
crates/guest-agent/src/: checkpoint.rs  cli.rs  events.rs  http.rs  lib.rs  main.rs  masker.rs  paths.rs  telemetry.rs
crates/guest-agent/tests/: integration.rs
crates/guest-common/: Cargo.toml
crates/guest-common/src/: lib.rs  telemetry.rs
crates/guest-download/: Cargo.toml
crates/guest-download/src/: main.rs
crates/guest-init/: Cargo.toml
crates/guest-init/src/: main.rs  pid1.rs
crates/runner/: Cargo.toml  verify-rootfs.sh
crates/runner/scripts/: build-rootfs.sh  mitm-addon.py  rootfs.Dockerfile
crates/runner/src/: api.rs  benchmark.rs  build.rs  build_rootfs.rs  config.rs  deps.rs  error.rs  executor.rs  http.rs  lock.rs  main.rs  network_logs.rs  paths.rs  proxy.rs  rootfs.rs  runner.rs  setup.rs  snapshot.rs  start.rs  status.rs  telemetry.rs  types.rs
crates/runner/src/cmd/: benchmark.rs  start.rs
crates/sandbox/: Cargo.toml
crates/sandbox-fc/: Cargo.toml
crates/sandbox-fc/examples/: sandbox-fc.rs
crates/sandbox-fc/src/: command.rs  config.rs  factory.rs  lib.rs  main.rs  paths.rs  prerequisites.rs  process.rs  sandbox.rs  snapshot.rs
crates/sandbox-fc/src/network/: guest.rs  mod.rs  pool.rs
crates/sandbox-fc/src/overlay/: error.rs  mod.rs  pool.rs
crates/sandbox/src/: config.rs  error.rs  factory.rs  lib.rs  sandbox.rs  types.rs
crates/vm-common/: Cargo.toml
crates/vm-common/src/: env.rs  lib.rs  log.rs  paths.rs  telemetry.rs
crates/vm-download/: Cargo.toml
crates/vm-download/src/: main.rs
crates/vm-init/: Cargo.toml
crates/vm-init/src/: init.rs  main.rs  pid1.rs
crates/vsock-agent/src/: lib.rs  main.rs
crates/vsock-guest/: Cargo.toml
crates/vsock-guest/examples/: vsock-guest.rs
crates/vsock-guest/src/: lib.rs
crates/vsock-host/: Cargo.toml
crates/vsock-host/src/: lib.rs
crates/vsock-proto/: Cargo.toml
crates/vsock-proto/src/: lib.rs
crates/vsock-test/: Cargo.toml
crates/vsock-test/tests/: integration.rs
docker/: Dockerfile.web  entrypoint.sh
docs/: agent-creator.md  architecture.md  cli-design-guideline.md  dev-workflow.md  issue-workflow.md
e2b/: run-agent.sh
e2e/: .env.local.tpl  Makefile  README.md  cli-auth-automation.ts  package-lock.json  package.json  pnpm-lock.yaml  run.sh
scripts/: changed.sh  generate-certs.sh  prepare.sh  sync-env.sh  trust-certs.sh
specs/: bad-smell.md  container-usage-comparison.md  docs-rules.md
turbo/: .oxlintrc.json  .prettierignore  README.md  bad-smell.md  knip.json  lefthook.yml  package.json  pnpm-lock.yaml  turbo.json
(+1818 files in other folders)
