[workspace]
resolver = "2"
members = ["vsock-guest", "vsock-proto", "vsock-host", "vsock-test", "guest-init", "guest-common", "guest-download", "sandbox", "sandbox-fc"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
# Internal crates
guest-common = { path = "guest-common" }
sandbox = { path = "sandbox" }
sandbox-fc = { path = "sandbox-fc" }
vsock-guest = { path = "vsock-guest" }
vsock-host = { path = "vsock-host" }
vsock-proto = { path = "vsock-proto" }

# External dependencies
async-trait = "0.1"
chrono = { version = "0.4", default-features = false }
flate2 = "1"
libc = "0.2"
nix = { version = "0.31", default-features = false }
serde = "1"
serde_json = "1"
tar = "0.4"
thiserror = "2"
tempfile = "3"
tokio = "1"
uuid = "1"
tracing = "0.1"
which = "8"
ureq = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
