[workspace]
resolver = "2"
members = [
    "ably-subscriber",
    "guest-agent",
    "guest-common",
    "guest-download",
    "guest-init",
    "guest-mock-claude",
    "runner",
    "sandbox",
    "sandbox-fc",
    "vsock-guest",
    "vsock-host",
    "vsock-proto",
    "vsock-test",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
# Internal crates
guest-common = { path = "guest-common" }
sandbox = { path = "sandbox" }
sandbox-fc = { path = "sandbox-fc" }
vsock-guest = { path = "vsock-guest" }
vsock-host = { path = "vsock-host" }
vsock-proto = { path = "vsock-proto" }

# External dependencies
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
clap = "4"
chrono = { version = "0.4", default-features = false }
flate2 = "1"
libc = "0.2"
nix = { version = "0.31", default-features = false }
serde = "1"
serde_json = "1"
tar = "0.4"
thiserror = "2"
tempfile = "3"
tokio = "1"
uuid = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
which = "8"
ureq = "3"
reqwest = { version = "0.12", default-features = false }
hmac = "0.12"
sha2 = "0.10"
tokio-util = "0.7"
tokio-tungstenite = { version = "0.26", default-features = false }
rmp-serde = "1"
rmpv = "1"
futures-util = "0.3"
url = "2"

[profile.release]
lto = true
strip = true
codegen-units = 1

[workspace.lints.rust]
warnings = "deny"

# See clippy.toml for test-specific overrides (allow-unwrap-in-tests etc.)
[workspace.lints.clippy]
all = "deny"
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
