[package]
name = "guest-agent"
version = "0.1.0"
edition.workspace = true

[dependencies]
base64.workspace = true
bytes.workspace = true
guest-common.workspace = true
libc.workspace = true
reqwest = { workspace = true, features = ["json", "rustls-tls-native-roots"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "process", "io-util", "fs", "sync"] }
tokio-util.workspace = true

[dev-dependencies]
httpmock.workspace = true

[lints]
workspace = true
