[package]
name = "runner"
version = "0.1.0"
edition.workspace = true

[dependencies]
sandbox = { workspace = true }
sandbox-fc = { workspace = true }

base64 = { workspace = true }
chrono = { workspace = true, features = ["serde", "now"] }
clap = { workspace = true, features = ["derive", "env"] }
nix = { workspace = true, features = ["user", "signal", "fs"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "signal", "time", "fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
flate2 = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls-native-roots"] }
sha2 = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
which = { workspace = true }

[lints]
workspace = true
