[package]
name = "sandbox-fc"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
sandbox.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
vsock-host.workspace = true
which.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
