[package]
name = "sandbox-fc"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
nix = { workspace = true, features = ["user"] }
sandbox.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["process", "fs", "rt", "macros", "sync", "io-util"] }
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }
vsock-host.workspace = true
which.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
