[package]
name = "sandbox-fc"
version = "0.1.0"
edition.workspace = true

[dependencies]
async-trait.workspace = true
libc.workspace = true
nix = { workspace = true, features = ["user", "inotify", "fs"] }
sandbox.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["process", "fs", "rt", "rt-multi-thread", "macros", "sync", "io-util", "net", "time"] }
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }
vsock-host.workspace = true
which.workspace = true

[dev-dependencies]
clap = { workspace = true, features = ["derive"] }
tempfile.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
