[package]
name = "vsock-host"
version = "0.1.0"
edition.workspace = true
description = "Vsock host client for Firecracker VM communication"

[dependencies]
tokio = { workspace = true, features = ["net", "io-util", "time", "rt", "macros", "sync"] }
vsock-proto.workspace = true

[lints]
workspace = true
